--- a/RestWhitAspCore - 06 Migrations/RestWhitAspCore - 06 Migrations/RestWhitAspCoreCalculator/RestWhitAspCoreUdemy.csproj
+++ b/RestWhitAspCore - 06 Migrations/RestWhitAspCore - 06 Migrations/RestWhitAspCoreCalculator/RestWhitAspCoreUdemy.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Db\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Evolve" Version="1.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
