--- a/RestWhitAspCore - 06 Migrations/RestWhitAspCore - 06 Migrations/RestWhitAspCoreCalculator/appsettings.json
+++ b/RestWhitAspCore - 06 Migrations/RestWhitAspCore - 06 Migrations/RestWhitAspCoreCalculator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MysqlConnection": {
-    "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=admin"
+    "MySqlConnectionString": "Server=localhost;Port=3306;Database=rest_with_asp_net_udemy;Uid=root;Pwd=admin;SslMode=none;"
   },
   "Logging": {
     "LogLevel": {
