--- a/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCoreCalculator/RestWhitAspCoreUdemy.csproj
+++ b/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCoreCalculator/RestWhitAspCoreUdemy.csproj
@@ -13,10 +13,12 @@
   <ItemGroup>
     <PackageReference Include="Evolve" Version="1.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="MySql.Data" Version="8.0.17" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.0" />
+    <PackageReference Include="Tapioca.HATEOAS" Version="1.0.4" />
   </ItemGroup>
   
   <Target Name="ChangeAliasesOfStrongNameAssemblies" BeforeTargets="FindReferenceAssembliesForReferences;ResolveReferences">
