--- a/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCoreCalculator/RestWhitAspCoreUdemy.csproj
+++ b/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCore - 08 VO - Value Object/RestWhitAspCoreCalculator/RestWhitAspCoreUdemy.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="MySql.Data" Version="8.0.17" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0" />
     <PackageReference Include="Tapioca.HATEOAS" Version="1.0.4" />
   </ItemGroup>
   
